# SETIJam

./: .gitignore  Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Assembly-UnityScript-Editor-vs.unityproj  Assembly-UnityScript-Editor.unityproj  Assembly-UnityScript-vs.unityproj  Assembly-UnityScript.unityproj  README.md  SETIJam-csharp.sln  SETIJam.sln  master-csharp.sln  master.sln  master.userprefs
Assets/: GITTEST.cs  Network.cs  Network.cs.bak
ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Temp/: UnityTempFile-0cd8bc4903afdad44b94be8289fe888e  UnityTempFile-15fdd2a05842d52428911d31ca4c0075  UnityTempFile-1934965666cab5445a5ca3a1fcbb1ceb  UnityTempFile-2e4f537b929e2b74ba6b39b609169152  UnityTempFile-395b0618217b5d444b9e47061e595301  UnityTempFile-5b83a4fda0a68754198605eeb8d64a5f  UnityTempFile-5f265d1f2b80d294991640d654407889  UnityTempFile-65ee7931c4ca1ce4bb68b54ea2c791d6  UnityTempFile-7c2b744836d1cdb4ab77920cd6781ed4  UnityTempFile-8a23a5b5d58789f45a36a9920beb776e  (+8 more)
server/: CMakeLists.txt  main.cpp
server/network/: address.cpp  tcp.cpp
server/src/: CMakeLists.txt  main.cpp
server/src/database/: data.h  mysql.cpp  mysql.h
server/src/game/: galaxy.cpp  galaxy.h  planet.cpp  planet.h  player.cpp  player.h
server/src/log/: log.cpp  log.h
server/src/network/: address.cpp  address.h  client.cpp  client.h  select.cpp  select.h  server.cpp  server.h  tcp.cpp  tcp.h
server/src/payload/: payload  payload.cpp  payload.h
server/src/tools/: remove_if.hpp
(+97 files in other folders)
